--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,8 +1,34 @@
+header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4.8rem;
+}
+
 h1 {
   font-size: 3.4rem;
   line-height: 4.8rem;
-  margin-bottom: 4.8rem;
+
+  span {
+    color: var(--color-orange);
+  }
 }
-h1 span {
-  color: var(--color-orange);
+ 
+nav {
+  ul {
+    display: flex;
+    gap: 1.6rem;
+    list-style: none;
+  }
+
+  a {
+    color: var(--color-blue);
+    text-decoration: none;
+    transition: all 0.3s linear;
+
+    &:hover {
+      color: var(--color-purple);
+      text-decoration: underline;
+    }
+  }
 }
