--- a/assets/style/_target.scss
+++ b/assets/style/_target.scss
@@ -26,17 +26,18 @@
 }
 
 .frame {
-  background: var(--trans-red);
-  border: 2px solid var(--color-red);
-  color: var(--color-red);
+  background: var(--trans-black);
+  border: 2px solid var(--color-black);
+  color: var(--color-black);
   margin-bottom: 2.4rem;
   min-height: 13.4rem;
+  padding: 0 0.8rem;
 
   &__title {
-    background: var(--color-red);
+    background: var(--color-black);
     color: var(--trans-white);
     display: block;
-    margin-bottom: 2.4rem;
+    margin: 0 -0.8rem 2.4rem;
     padding: 0 0.8rem;
     text-align: left;
   }
@@ -45,7 +46,17 @@
     display: block;
   }
 
-  + .frame {
+  &--red {
+    background: var(--trans-red);
+    border: 2px solid var(--color-red);
+    color: var(--color-red);
+
+    .frame__title {
+      background: var(--color-red);
+    }
+  }
+
+  &--blue {
     background: var(--trans-blue);
     border: 2px solid var(--color-blue);
     color: var(--color-blue);
@@ -55,7 +66,7 @@
     }
   }
 
-  + .frame + .frame {
+  &--purple {
     background: var(--trans-purple);
     border: 2px solid var(--color-purple);
     color: var(--color-purple);
@@ -64,4 +75,33 @@
       background: var(--color-purple);
     }
   }
+
+  &--green {
+    background: var(--trans-green);
+    border: 2px solid var(--color-green);
+    color: var(--color-green);
+
+    .frame__title {
+      background: var(--color-green);
+    }
+  }
 }
+
+
+.heap-location {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.8rem;
+}
+
+.stack__item,
+.heap__item {
+  background: var(--trans-orange);
+  border: 1px solid var(--color-orange);
+  display: inline-block;
+  font-family: var(--font-code);
+  font-weight: 700;
+  padding: 0.4rem;
+  text-align: center;
+}
+
